--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ window.closeItemModal = () => {
 
 document.addEventListener('DOMContentLoaded', () => {
     // --- CONFIGURATION ---
-    const local_deliveryDates = ['2025-09-19'], ['2025-09-22'];
+    const local_deliveryDates = ['2025-09-19','2025-09-22'];
     const local_menu = [
         { id:'apple-kiss',   name:'Apple Kiss',   ingredients:'แอปเปิ้ลเขียว, ขิง, มะนาว', properties:'ช่วยป้องกันผิวจากแสงแดด, ลดจุดด่างดำ, รอยสิว', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/1.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:999}]},
         { id:'blush-bloom',  name:'Blush Bloom',  ingredients:'มะเขือเทศ, สับปะรด, มะนาว', properties:'ช่วยผลัดเซลล์ผิวเก่าและลดริ้วรอย', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/2.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:999}]},
@@ -635,6 +635,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
