--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ window.adjustItem = (menuId, size, allergyKey, delta) => {
 
 document.addEventListener('DOMContentLoaded', () => {
   // --- CONFIGURATION ---
-  const local_deliveryDates = ['2025-10-09','2025-10-15','2025-10-16'];
+  const local_deliveryDates = ['2025-10-17','2025-10-20'];
   const local_menu = [
     { id:'apple-kiss',   name:'Apple Kiss',   ingredients:'แอปเปิ้ลเขียว, ขิง, มะนาว', properties:'ช่วยป้องกันผิวจากแสงแดด, ลดจุดด่างดำ, รอยสิว', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/1.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'blush-bloom',  name:'Blush Bloom',  ingredients:'มะเขือเทศ, สับปะรด, มะนาว', properties:'ช่วยผลัดเซลล์ผิวเก่าและลดริ้วรอย', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/2.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
@@ -705,22 +705,6 @@ goToCheckoutBtnEl.addEventListener('click', () => {
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
