--- a/index.html
+++ b/index.html
@@ -346,14 +346,14 @@ document.addEventListener('DOMContentLoaded', () => {
   // --- CONFIGURATION ---
   const local_deliveryDates = ['2025-10-17','2025-10-20'];
   const local_menu = [
-    { id:'apple-kiss',   name:'Apple Kiss',   ingredients:'แอปเปิ้ลเขียว, ขิง, มะนาว', properties:'ช่วยป้องกันผิวจากแสงแดด, ลดจุดด่างดำ, รอยสิว', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/1.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
-    { id:'blush-bloom',  name:'Blush Bloom',  ingredients:'มะเขือเทศ, สับปะรด, มะนาว', properties:'ช่วยผลัดเซลล์ผิวเก่าและลดริ้วรอย', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/2.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
-    { id:'happy-tummy',  name:'Happy Tummy',  ingredients:'แอปเปิ้ล, กระชาย, ขิง, มะนาว', properties:'ล้างสารพิษ, รักษาอาการท้องผูก, ท้องอืด, จุกเสียดแน่นท้อง', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/3.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
-    { id:'hearty-green', name:'Hearty Green', ingredients:'แอปเปิ้ล, สับปะรด, แตงกวาญี่ปุ่น', properties:'ลดคอเลสเตอรอลและต่อต้านมะเร็ง', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/4.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'apple-kiss',   name:'Apple Kiss',   ingredients:'แอปเปิ้ลเขียว, ขิง, มะนาว', properties:'ช่วยป้องกันผิวจากแสงแดด, ลดจุดด่างดำ, รอยสิว', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/apple%20kiss.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'blush-bloom',  name:'Blush Bloom',  ingredients:'มะเขือเทศ, สับปะรด, มะนาว', properties:'ช่วยผลัดเซลล์ผิวเก่าและลดริ้วรอย', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/blush%20bloom.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'lime-guava',  name:'Lime Guava',  ingredients:'แอปเปิ้ลเขียว, ฝรั่ง, แตงกวาญี่ปุ่น, มะนาว', properties:'ล้างสารพิษ, รักษาอาการท้องผูก, ท้องอืด, จุกเสียดแน่นท้อง', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/3.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'hearty-green', name:'Hearty Green', ingredients:'แอปเปิ้ล, สับปะรด, แตงกวาญี่ปุ่น', properties:'ลดคอเลสเตอรอลและต่อต้านมะเร็ง', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/hearty%20green.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'sweet-detox',  name:'Sweet Detox',  ingredients:'แอปเปิ้ล, แครอท, บีทรูท', properties:'ล้างสารพิษสำหรับคนควบคุมน้ำหนัก, ต้านสารอนุมูลอิสระ', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/5.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
-    { id:'beet-love',    name:'Beet Love',    ingredients:'แอปเปิ้ล, บีทรูท, มะนาว', properties:'ดูแลสุขภาพหัวใจและควบคุมความดันโลหิต', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/6.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
-    { id:'smart-sip',    name:'Smart Sip',    ingredients:'แอปเปิ้ล, เคล, สับปะรด', properties:'ช่วยบำรุงการทำงานของสมองและบำรุงสายตา', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/7.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
-    { id:'recharge-me',  name:'Recharge Me',  ingredients:'แอปเปิ้ล, ขิง, มะนาว', properties:'กระตุ้นร่างกายให้ฟื้นตัวจากการเมื่อยล้า', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/8.png?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'beet-love',    name:'Beet Love',    ingredients:'แอปเปิ้ล, บีทรูท, มะนาว', properties:'ดูแลสุขภาพหัวใจและควบคุมความดันโลหิต', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/beet%20love.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'smart-sip',    name:'Smart Sip',    ingredients:'แอปเปิ้ล, เคล, สับปะรด', properties:'ช่วยบำรุงการทำงานของสมองและบำรุงสายตา', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/smart%20sip.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'recharge-me',  name:'Recharge Me',  ingredients:'แอปเปิ้ล, ขิง, มะนาว', properties:'กระตุ้นร่างกายให้ฟื้นตัวจากการเมื่อยล้า', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/recharge%20me.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
   ];
   const local_discountCodes = [
     { code:"SUCHATANDSOMPOP", type:"percent", value:15, expiryDate:"2025-12-31", minSpend:0, minItems:5 },
@@ -705,6 +705,7 @@ goToCheckoutBtnEl.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
