--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ window.adjustItem = (menuId, size, allergyKey, delta) => {
 
 document.addEventListener('DOMContentLoaded', () => {
   // --- CONFIGURATION ---
-  const local_deliveryDates = ['2025-10-17','2025-10-20'];
+  const local_deliveryDates = ['2025-11-12','2025-11-13','2025-11-14'];
   const local_menu = [
     { id:'apple-kiss',   name:'Apple Kiss',   ingredients:'แอปเปิ้ลเขียว, ขิง, มะนาว', properties:'ช่วยป้องกันผิวจากแสงแดด, ลดจุดด่างดำ, รอยสิว', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/apple%20kiss.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'blush-bloom',  name:'Blush Bloom',  ingredients:'มะเขือเทศ, สับปะรด, มะนาว', properties:'ช่วยผลัดเซลล์ผิวเก่าและลดริ้วรอย', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/blush%20bloom.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
@@ -705,6 +705,7 @@ goToCheckoutBtnEl.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
