--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ document.addEventListener('DOMContentLoaded', () => {
     { code:"SUCHATANDSOMPOP", type:"percent", value:15, expiryDate:"2025-12-31", minSpend:0, minItems:5 },
     { code:"VERVETIKTOK", type:"percent", value:10, expiryDate:"2025-09-30", minSpend:0, minItems:3 }
   ];
-  const n8nWebhookUrl = "jackie-depressible-verbatim.ngrok-free.dev host.docker.internal/webhook-test/3292a5c3-0f7f-424f-92f8-7dc42f51d763";
+  const n8nWebhookUrl = "https://jackie-depressible-verbatim.ngrok-free.dev host.docker.internal/webhook-test/3292a5c3-0f7f-424f-92f8-7dc42f51d763";
 
   menu = local_menu;
 
@@ -705,6 +705,7 @@ goToCheckoutBtnEl.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
