--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const local_menu = [
     { id:'apple-kiss',   name:'Apple Kiss',   ingredients:'แอปเปิ้ลเขียว, ขิง, มะนาว', properties:'ช่วยป้องกันผิวจากแสงแดด, ลดจุดด่างดำ, รอยสิว', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/apple%20kiss.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'blush-bloom',  name:'Blush Bloom',  ingredients:'มะเขือเทศ, สับปะรด, มะนาว', properties:'ช่วยผลัดเซลล์ผิวเก่าและลดริ้วรอย', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/blush%20bloom.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
-    { id:'lime-guava',  name:'Lime Guava',  ingredients:'แอปเปิ้ลเขียว, ฝรั่ง, แตงกวาญี่ปุ่น, มะนาว', properties:'ล้างสารพิษ, รักษาอาการท้องผูก, ท้องอืด, จุกเสียดแน่นท้อง', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/lime%20guava.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
+    { id:'Pure-guava',  name:'Pure Guava',  ingredients:'แอปเปิ้ลเขียว, ฝรั่ง, แตงกวาญี่ปุ่น, มะนาว', properties:'ล้างสารพิษ, รักษาอาการท้องผูก, ท้องอืด, จุกเสียดแน่นท้อง', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/lime%20guava.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'hearty-green', name:'Hearty Green', ingredients:'แอปเปิ้ล, สับปะรด, แตงกวาญี่ปุ่น', properties:'ลดคอเลสเตอรอลและต่อต้านมะเร็ง', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/hearty%20green.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'sweet-detox',  name:'Sweet Detox',  ingredients:'แอปเปิ้ล, แครอท, บีทรูท', properties:'ล้างสารพิษสำหรับคนควบคุมน้ำหนัก, ต้านสารอนุมูลอิสระ', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/sweet%20detox.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'beet-love',    name:'Beet Love',    ingredients:'แอปเปิ้ล, บีทรูท, มะนาว', properties:'ดูแลสุขภาพหัวใจและควบคุมความดันโลหิต', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/beet%20love.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
@@ -808,6 +808,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
