--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
       <div>
         <label for="customerNote" class="block text-gray-700 font-bold mb-2">หมายเหตุ</label>
-        <textarea id="customerNote" placeholder="เช่น รับที่ ไทรน้อย, สาทร, อื่นๆ"
+        <textarea id="customerNote" placeholder="เช่น รับที่ ไทรน้อย, สาทร หรือ อยู่นอกพื้นที่รับสินค้าสามารถทักมาที่ ig/tiktok : @vervejuice.th"
                   class="w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300 resize-none h-24"></textarea>
       </div>
     </div>
@@ -808,6 +808,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
