--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
       <hr class="border-dashed border-emerald-200">
       <div>
         <p class="font-bold text-center text-emerald-700">🍹 รอบนัดรับ 🍹</p>
-        <p class="text-center">วันพฤหัสบดีที่ 20/11</p>
-        <p class="text-center">วันศุกร์ที่ 21/11</p>
         <p class="text-center text-xs text-gray-600">(ปิดรับออเดอร์ก่อน 00:00 ของวันจัดส่ง)</p>
       </div>
     </div>
@@ -432,7 +430,7 @@ renderCartSidebarContent = () => {
 };
 
 document.addEventListener('DOMContentLoaded', () => {
-  const local_deliveryDates = ['2025-11-20','2025-11-21','2025-11-14'];
+  const local_deliveryDates = ['2025-12-01','2025-12-02','2025-12-03','2025-12-04','2025-12-05'];
   const local_menu = [
     { id:'apple-kiss',   name:'Apple Kiss',   ingredients:'แอปเปิ้ลเขียว, ขิง, มะนาว', properties:'ช่วยป้องกันผิวจากแสงแดด, ลดจุดด่างดำ, รอยสิว', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/apple%20kiss.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
     { id:'blush-bloom',  name:'Blush Bloom',  ingredients:'มะเขือเทศ, สับปะรด, มะนาว', properties:'ช่วยผลัดเซลล์ผิวเก่าและลดริ้วรอย', imageUrl:'https://github.com/kornkawes/VerveImage/blob/main/blush%20bloom.jpg?raw=true', sizes: [{size:'200ml', price:70}, {size:'300ml', price:105}]},
@@ -758,3 +756,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
