--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
     <!-- NEW: Announcement Box -->
     <div class="mb-6 p-4 bg-white/80 rounded-2xl border border-emerald-200 text-sm text-gray-800 space-y-3">
       <div>
-        <p class="font-bold text-center text-emerald-700">📍 จุดนัดรับหลัก 📍</p>
+        <p class="font-bold text-center text-emerald-700">📍 จุดนัดรับ 📍</p>
         <p class="text-center">สาทร / ตึก Park Silom</p>
         <p class="text-center">ไทรน้อย / หมู่บ้านชวนชม</p>
         <p class="text-center text-xs text-gray-600">(อยู่นอกพื้นที่สามารถทักมาสอบถามได้)</p>
+                <p class="text-center text-xs text-gray-600">(ปิดรับออเดอร์ก่อน 00:00 ของวันจัดส่ง)</p>
       </div>
       <hr class="border-dashed border-emerald-200">
       <div>
-        <p class="font-bold text-center text-emerald-700">🍹 รอบนัดรับ 🍹</p>
-        <p class="text-center text-xs text-gray-600">(ปิดรับออเดอร์ก่อน 00:00 ของวันจัดส่ง)</p>
+        <p class="font-bold text-center text-emerald-700">🍹 ประกาศ 🍹</p>
+        <p class="text-center">เปิดพรีออเดอร์ทุกเมนูเริ่ม 1 ธันวาคม 2025</p>
       </div>
     </div>
 
@@ -756,4 +757,3 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
-
