--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
       <div>
         <label for="customerNote" class="block text-gray-700 font-bold mb-2">หมายเหตุ</label>
-        <textarea id="customerNote" placeholder="ส่งด้วย grab/lineman จากจุดนับรับในโซนสาทร/ไทรน้อย"
+        <textarea id="customerNote" placeholder="เช่น ส่งด้วย grab/lineman จากจุดนับรับในโซนสาทร/ไทรน้อย"
                   class="w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300 resize-none h-24"></textarea>
       </div>
     </div>
@@ -852,3 +852,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
