--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ document.addEventListener('DOMContentLoaded', () => {
     },
     sainoi: {
       label: 'ไทรน้อย / หมู่บ้านชวนชม',
-      weekdays: [1, 2, 3] // พฤหัส-ศุกร์ (ปรับได้เลยตามรอบจริง)
+      weekdays: [1, 2, 3, 4] // พฤหัส-ศุกร์ (ปรับได้เลยตามรอบจริง)
     }
     // ถ้าอนาคตมีพื้นที่อื่น เพิ่ม key เพิ่มได้ เช่น:
     // otherArea: { label: 'พื้นที่อื่น', weekdays: [2,5] }
