--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p class="font-bold text-center text-emerald-700">📍 สถานที่จัดส่ง 📍</p>
         <p class="text-center">สาทร / ตึก Park Silom</p>
         <p class="text-center">ไทรน้อย / หมู่บ้านชวนชม</p>
-        <p class="text-center text-xs text-gray-600">(อยู่นอกพื้นที่สามารถทักมาสอบถามได้)</p>
+        <p class="text-center text-xs text-gray-600">(อยู่นอกพื้นที่สามารถทักมาสอบถามได้ครับ)</p>
       </div>
       <hr class="border-dashed border-emerald-200">
       <div>
